@@ -65,6 +65,7 @@
 38. Allow to move streams to different categories via drag-n-drop.
 39. Read/write device cache files in non-gui thread.
 40. Add option to save streams in mpd folder.
+41. GZip compress streams files.
 
 0.9.2
 -----
